Initial commit of the project files

--- a/article.html
+++ b/article.html
@@ -4,82 +4,217 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aspek Matematika dalam Rumah Adat Kajang</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css" />
+    <!-- Base styles and panorama viewer assets -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"
+    />
     <link rel="stylesheet" href="styles/article.css" />
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer></script>
+    <!-- MathJax renders LaTeX formulas inline and as block math -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+      defer
+    ></script>
   </head>
   <body>
+    <!-- Hero section -->
     <header>
       <h1>Aspek Matematika dalam Rumah Adat Kajang</h1>
       <div class="muted">
-        Kajian tentang keterkaitan antara bentuk arsitektur tradisional dan prinsip-prinsip matematika pada Rumah Adat Kajang. Melalui etnomatematika, kita dapat memahami bagaimana masyarakat Ammatoa Kajang menerapkan konsep geometri, simetri, dan proporsi dalam setiap unsur bangunan.
+        Kajian tentang keterkaitan antara bentuk arsitektur tradisional dan prinsip-prinsip matematika
+        pada Rumah Adat Kajang. Melalui etnomatematika, kita dapat memahami bagaimana masyarakat
+        Ammatoa Kajang menerapkan konsep geometri, simetri, dan proporsi dalam setiap unsur bangunan.
       </div>
     </header>
 
+    <!-- Main article wrapper -->
     <div class="shell">
       <div class="page-actions">
         <a class="back-home" href="index.html">← Kembali ke Beranda</a>
       </div>
 
       <div class="content">
-        <h2>1. Pendahuluan</h2>
+        <h2>A. Pendahuluan</h2>
         <p>
-          <strong>Rumah Adat Kajang</strong> atau disebut juga <em>Balla’ To Kajang</em> merupakan rumah tradisional masyarakat Ammatoa Kajang di Kabupaten Bulukumba, Sulawesi Selatan. Bangunan ini mencerminkan prinsip hidup masyarakat Kajang yang menjunjung tinggi kesederhanaan, kesetaraan, dan keharmonisan dengan alam. Di balik bentuk arsitekturnya yang seragam dan sederhana, tersimpan penerapan konsep-konsep matematika seperti geometri, kesebangunan, simetri, dan proporsi yang muncul secara alami dalam struktur dan tata ruangnya.
+          <strong>Rumah Adat Kajang</strong> atau <em>Balla’ To Kajang</em> merupakan rumah tradisional
+          masyarakat Ammatoa Kajang di Kabupaten Bulukumba, Sulawesi Selatan. Rumah ini tidak hanya
+          memiliki nilai estetika dan filosofis, tetapi juga mengandung penerapan konsep-konsep
+          matematika seperti geometri, simetri, perbandingan, dan pola bilangan yang muncul secara
+          alami. Kajian etnomatematika terhadap rumah adat ini membantu memahami bagaimana masyarakat
+          Kajang mengintegrasikan nilai-nilai budaya dan prinsip matematika dalam arsitektur mereka.
         </p>
+        <p>Prinsip kesederhanaan dan keseimbangan pada <strong>Rumah Adat Kajang</strong> tidak hanya memiliki nilai estetika, tetapi juga berkaitan dengan filosofi <em>Pasang ri Kajang</em> yang mengatur kehidupan masyarakat Ammatoa Kajang (Kadir & Lathifah, 2022).</p>
+        <p>Struktur rumah panggung yang berbentuk simetris mencerminkan keseimbangan antara manusia dan alam (Amiruddin, 2019), sedangkan penggunaan bentuk segitiga dan persegi menunjukkan penerapan prinsip geometri dasar dalam arsitektur (Arifin & Wahyuni, 2020).
+        </p>
+
         <figure>
           <img src="../assets/images/kajang.jpg" alt="Tampak depan Rumah Adat Kajang" />
-          <figcaption>Rumah Adat Kajang di Bulukumba yang menunjukkan struktur simetris dan bentuk atap segitiga khas.</figcaption>
+          <figcaption>
+            Rumah Adat Kajang di Bulukumba yang menunjukkan struktur simetris dan bentuk atap segitiga
+            khas.
+          </figcaption>
         </figure>
 
-        <h2>2. Konsep Matematika dalam Struktur Rumah Adat Kajang</h2>
+        <h2>B. Konsep Matematika dalam Struktur Rumah Adat Kajang</h2>
         <p>
-          Rumah Adat Kajang terdiri atas beberapa elemen utama yang masing-masing memiliki keterkaitan dengan konsep matematika dasar. Di antaranya adalah bentuk atap segitiga sama kaki, dinding persegi panjang, tiang penyangga yang tersusun simetris, tangga berbentuk segitiga siku-siku, serta jendela dan pintu berbentuk persegi panjang.
+          Rumah Adat Kajang terdiri atas beberapa elemen utama, yaitu atap, dinding, tiang, tangga,
+          jendela, dan pintu. Masing-masing bagian tersebut menunjukkan keterkaitan dengan konsep
+          matematika dasar seperti bentuk geometri, simetri, pola berulang, deret bilangan,
+          trigonometri, dan proporsi.
         </p>
 
-        <h3>2.A Atap Segitiga Sama Kaki</h3>
+        <!-- ATAP -->
+        <h3>1. Atap Segitiga Sama Kaki</h3>
         <p>
-          Bagian atap berbentuk <strong>segitiga sama kaki</strong> melambangkan keseimbangan dan kesederhanaan. Secara matematis, bentuk ini mengandung konsep sudut, tinggi segitiga, dan simetri lipat satu. Kemiringan atap dihitung agar air hujan dapat mengalir dengan baik, menggunakan hubungan trigonometri berikut:
-        </p>
-        <p>$$\tan(\theta) = \frac{\text{tinggi atap}}{\tfrac{1}{2} \times \text{panjang alas}}$$</p>
-
-        <h3>2.B Dinding Persegi Panjang</h3>
-        <p>
-          Dinding rumah terdiri dari papan kayu yang disusun sejajar membentuk <strong>persegi panjang</strong>. Setiap bidang menunjukkan keteraturan dan proporsi matematis, di mana luas bidang dapat dihitung dengan:
-        </p>
-        <p>$$A = p \times t$$</p>
-
-        <h3>2.C Tiang Penyangga</h3>
-        <p>
-          Rumah Kajang memiliki 16 tiang kayu yang tersusun dalam empat baris sejajar. Susunan ini menunjukkan prinsip <strong>simetri sumbu vertikal</strong> serta keseimbangan struktur bangunan. Jumlah tiang yang genap juga memperlihatkan pola bilangan teratur.
+          Bagian atap pada Rumah Adat Kajang berbentuk <strong>segitiga sama kaki</strong> dengan bagian
+          tengah yang menjulang tinggi. Selain berfungsi melindungi rumah dari panas dan hujan, bentuk
+          ini menunjukkan penerapan konsep <em>geometri bidang</em> dan <em>trigonometri</em>.
+          Struktur segitiga melambangkan keseimbangan dan kesederhanaan yang menjadi nilai utama
+          masyarakat Ammatoa Kajang.
         </p>
 
-        <h3>2.D Tangga</h3>
-        <p>
-          Tangga berfungsi sebagai penghubung antara tanah dan lantai rumah panggung. Jumlah anak tangga biasanya ganjil (5 atau 7), mencerminkan konsep pola bilangan. Bentuknya menyerupai <strong>segitiga siku-siku</strong> yang dapat dijelaskan dengan Teorema Pythagoras:
-        </p>
-        <p>$$a^2 + b^2 = c^2$$</p>
+        <div class="image-row">
+          <img src="../assets/images/atap1.jpg" alt="Atap Kajang tampak depan" />
+          <img src="../assets/images/atap2.jpg" alt="Atap Kajang sisi samping" />
+        </div>
 
-        <h3>2.E Jendela dan Pintu</h3>
+        <p>Luas bidang atap dapat dihitung dengan:</p>
+        <p>$$L = \frac{1}{2} \times a \times t$$</p>
         <p>
-          Jendela dan pintu dibuat dalam bentuk <strong>persegi panjang vertikal</strong> dan ditempatkan simetris di sisi kiri-kanan rumah. Luas bukaan dihitung dengan rumus:
+          Misalnya, alas atap 6 meter dan tinggi 3 meter, maka \(L = \frac{1}{2} \times 6 \times 3 =
+          9\,m^2\). Sisi miring dapat dihitung menggunakan Teorema Pythagoras:
         </p>
+        <p>$$s = \sqrt{\left(\frac{a}{2}\right)^2 + t^2}$$</p>
+        <p>
+          Dengan \(a = 6\) meter dan \(t = 3\) meter, maka \(s = 4{,}24\,m\). Kemiringan atap diperoleh
+          dari:
+        </p>
+        <p>$$\tan(\theta) = \frac{t}{\tfrac{a}{2}} = 1 \Rightarrow \theta = 45^\circ$$</p>
+        <p>
+          Sudut 45° memungkinkan air hujan mengalir cepat tanpa masuk ke rumah. Secara budaya, segitiga
+          yang mengarah ke atas melambangkan keseimbangan hubungan antara manusia, alam, dan Sang
+          Pencipta (<em>tallasa kamase-masea</em>).
+        </p>
+
+        <!-- DINDING -->
+        <h3>2. Dinding Persegi Panjang</h3>
+        <p>
+          Dinding rumah adat Kajang terbuat dari papan kayu yang disusun sejajar secara vertikal,
+          membentuk bidang <strong>persegi panjang</strong>. Setiap papan memiliki ukuran dan jarak yang
+          konsisten, mencerminkan penerapan konsep simetri, kesebangunan, dan pola berulang.
+        </p>
+        <div class="image-row">
+          <img src="../assets/images/dinding1.jpg" alt="Dinding Rumah Adat Kajang 1" />
+          <img src="../assets/images/dinding2.jpg" alt="Dinding Rumah Adat Kajang 2" />
+        </div>
+        <p>Luas bidang dinding dapat dihitung dengan rumus:</p>
         <p>$$L = p \times l$$</p>
         <p>
-          Pintu utama berukuran kecil dan rendah, melambangkan kerendahan hati sekaligus proporsional terhadap dimensi tubuh manusia—contoh penerapan konsep skala dan rasio dalam matematika.
+          Misalnya, panjang 4 meter dan tinggi 3 meter, maka luas satu bidang \(L = 12\,m^2\). Bila
+          rumah memiliki dua sisi dinding identik, luas totalnya \(24\,m^2\). Pola papan yang disusun
+          berulang dapat dijelaskan menggunakan konsep deret aritmetika.
         </p>
 
-        <h2>3. Panorama 360° Rumah Adat Kajang</h2>
+        <!-- TIANG -->
+        <h3>3. Tiang Penyangga</h3>
         <p>
-          Jelajahi panorama berikut untuk melihat struktur dan tata ruang Rumah Adat Kajang dari berbagai sudut pandang.
+          Tiang-tiang kayu menjadi elemen utama penopang struktur rumah adat Kajang. Tiang ini disusun
+          sejajar dengan jarak yang sama, memperlihatkan penerapan konsep <strong>barisan bilangan</strong>
+          dan <strong>simetri</strong>. Biasanya rumah Kajang memiliki 16 tiang yang terbagi dalam empat
+          baris sejajar.
+        </p>
+        <div class="image-row">
+          <img src="../assets/images/tiang2.jpg" alt="Tiang Rumah Adat Kajang 1" />
+        </div>
+        <p>
+          Jika jarak antar tiang dilambangkan dengan \(s\) dan jumlah tiang \(n\), maka panjang rumah
+          dapat dihitung dengan:
+        </p>
+        <p>$$P = (n - 1) \times s$$</p>
+        <p>
+          Contoh: 7 tiang dengan jarak 2 m menghasilkan \(P = (7 - 1) \times 2 = 12\,m\). Jumlah tiang
+          ganjil (5, 7, 9) melambangkan keseimbangan antara manusia, alam, dan leluhur.
+        </p>
+
+        <!-- TANGGA -->
+        <h3>4. Tangga</h3>
+        <p>
+          Tangga rumah adat Kajang berfungsi sebagai penghubung antara tanah dan lantai rumah panggung.
+          Jumlah anak tangga biasanya ganjil (5 atau 7), melambangkan keseimbangan antara manusia, alam,
+          dan spiritualitas.
+        </p>
+        <div class="image-row">
+          <img src="../assets/images/tangga1.jpg" alt="Tangga Rumah Adat Kajang 1" />
+          <img src="../assets/images/tangga2.jpg" alt="Tangga Rumah Adat Kajang 2" />
+        </div>
+        <p>
+          Tangga menyerupai susunan <strong>segitiga siku-siku berulang</strong>, di mana setiap anak
+          tangga memiliki alas (a), tinggi (t), dan sisi miring (m) yang dihitung dengan:
+        </p>
+        <p>$$m^2 = a^2 + t^2$$</p>
+
+        <!-- JENDELA -->
+        <h3>5. Jendela Persegi Panjang</h3>
+        <p>
+          Jendela pada Rumah Adat Kajang berbentuk <strong>persegi panjang vertikal</strong> dan ditempatkan
+          simetris di sisi kiri-kanan bangunan. Penempatan simetris ini menunjukkan konsep refleksi
+          (<em>simetri lipat</em>) dalam geometri.
+        </p>
+        <div class="image-row">
+          <img src="../assets/images/jendela1.jpg" alt="jendela Adat Kajang 1" />
+          <img src="../assets/images/jendela2.jpg" alt="jendela Rumah Adat Kajang 2" />
+        </div>
+        <p>$$L = p \times l$$</p>
+        <p>
+          Misalnya, tinggi jendela 1,2 m dan lebar 0,6 m menghasilkan luas \(0,72\,m^2\). Susunan kisi
+          vertikal jendela juga menunjukkan konsep translasi dan pola berulang yang menjaga sirkulasi
+          udara.
+        </p>
+
+        <!-- PINTU -->
+        <h3>6. Pintu (Laleng)</h3>
+        <p>
+          Pintu rumah adat Kajang, disebut <em>laleng</em>, memiliki ukuran kecil dan rendah. Siapa pun
+          yang masuk harus menundukkan kepala terlebih dahulu sebagai simbol kerendahan hati dan rasa
+          hormat.
+        </p>
+         <div class="image-row">
+          <img src="../assets/images/pintu2.jpg" alt="pintu Adat Kajang 1" />
+        </div>
+        <p>
+          Secara matematis, pintu berbentuk persegi panjang, sehingga dapat dihitung luas dan kelilingnya:
+        </p>
+        <p>$$L = p \times l \quad ; \quad K = 2(p + l)$$</p>
+        <p>
+          Misalnya, tinggi pintu 1,5 m dan lebar 0,7 m menghasilkan luas \(1,05\,m^2\) dan keliling
+          \(4,4\,m\). Rasio antara tinggi dan lebar pintu:
+        </p>
+        <p>$$R = \frac{p}{l} = 1,875$$</p>
+
+        <h2>C. Panorama 360° Rumah Adat Kajang</h2>
+        <p>
+          Jelajahi panorama berikut untuk melihat struktur dan tata ruang Rumah Adat Kajang dari berbagai
+          sudut pandang.
         </p>
         <div class="mini-panorama">
           <div id="mini-panorama"></div>
         </div>
 
-        <h2>4. Kesimpulan</h2>
+        <h2>D. Kesimpulan</h2>
         <p>
-          Rumah Adat Kajang merupakan wujud nyata penerapan prinsip matematika dalam kehidupan tradisional. Konsep-konsep seperti geometri, simetri, perbandingan, dan pola bilangan muncul secara alami dalam desain dan konstruksinya. Kajian etnomatematika membantu kita memahami bahwa matematika tidak hanya hidup dalam teori, tetapi juga terwujud dalam karya budaya dan arsitektur lokal masyarakat Indonesia.
+          Rumah Adat Kajang merupakan wujud integrasi antara matematika dan budaya. Setiap elemen
+          bangunan memuat penerapan konsep-konsep matematika seperti geometri, simetri, pola berulang,
+          deret bilangan, trigonometri, dan proporsi. Di balik struktur tersebut tersimpan makna filosofis
+          tentang keseimbangan, kesederhanaan, dan harmoni antara manusia, alam, dan Sang Pencipta.
         </p>
+
+        <h2>E. Daftar Pustaka</h2>
+        <ul>
+        <li>Amiruddin, S. (2019). <em>Tanda dan simbol arsitektural rumah tradisional Kajang di Kabupaten Bulukumba, Sulawesi Selatan</em> [Tesis, Universitas Gadjah Mada]. Repositori UGM.<a href="https://etd.repository.ugm.ac.id/penelitian/detail/92311" target="_blank">https://etd.repository.ugm.ac.id/penelitian/detail/92311</a></li>
+        <li>Arifin, A. A., & Wahyuni, A. (2020). <em>Arsitektur rumah tradisional suku Kajang di Provinsi Sulawesi Selatan</em>. <em>Jurnal Mozaik Humaniora</em>, 20(2), 89–98.<a href="https://e-journal.unair.ac.id/MOZAIK/article/view/9887" target="_blank">https://e-journal.unair.ac.id/MOZAIK/article/view/9887</a></li>
+        <li>Kadir, N., & Lathifah, S. (2022). <em>Studi etnografi nilai falsafah Pasang ri Kajang dalam kehidupan masyarakat adat Ammatoa Kajang</em>. <em>Jurnal Humaniora Culture and Justice</em>, 7(1), 45–56.<a href="https://ejurnal.ung.ac.id/index.php/jhcj/article/download/31791/10888" target="_blank">https://ejurnal.ung.ac.id/index.php/jhcj/article/download/31791/10888</a></li>
+        <li>Sari, D. P., & Mulyana, E. (2021). <em>Identifikasi etnomatematika pada rumah adat Kajang Lako di Jambi</em>. <em>Prosiding Seminar Nasional Pendidikan Matematika</em>, 5(1), 134–142.<a href="https://eprints.ukmc.ac.id/8687/" target="_blank">https://eprints.ukmc.ac.id/8687/</a></li>
+        </ul>
       </div>
     </div>
 
@@ -87,9 +222,9 @@
       © 2025 · Aspek Matematika dalam Rumah Adat Kajang · Disusun oleh Kelompok Bulukumba
     </footer>
 
+    <!-- Pannellum panorama viewer -->
     <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
     <script>
-      // Panorama utama (bisa ganti file dengan path 360° kamu)
       pannellum.viewer("mini-panorama", {
         type: "equirectangular",
         panorama: "../assets/360_images/depan rumah.jpg",
@@ -98,7 +233,7 @@
         compass: false,
         hfov: 110,
         pitch: 0,
-        yaw: 120
+        yaw: 120,
       });
     </script>
   </body>
