--- a/article.html
+++ b/article.html
@@ -48,7 +48,7 @@
         </p>
 
         <figure>
-          <img src="../assets/images/kajang.jpg" alt="Tampak depan Rumah Adat Kajang" />
+          <img src="assets/images/kajang.jpg" alt="Tampak depan Rumah Adat Kajang" />
           <figcaption>
             Rumah Adat Kajang di Bulukumba yang menunjukkan struktur simetris dan bentuk atap segitiga
             khas.
@@ -74,8 +74,8 @@
         </p>
 
         <div class="image-row">
-          <img src="../assets/images/atap1.jpg" alt="Atap Kajang tampak depan" />
-          <img src="../assets/images/atap2.jpg" alt="Atap Kajang sisi samping" />
+          <img src="assets/images/atap1.jpg" alt="Atap Kajang tampak depan" />
+          <img src="assets/images/atap2.jpg" alt="Atap Kajang sisi samping" />
         </div>
 
         <p>Luas bidang atap dapat dihitung dengan:</p>
@@ -104,8 +104,8 @@
           konsisten, mencerminkan penerapan konsep simetri, kesebangunan, dan pola berulang.
         </p>
         <div class="image-row">
-          <img src="../assets/images/dinding1.jpg" alt="Dinding Rumah Adat Kajang 1" />
-          <img src="../assets/images/dinding2.jpg" alt="Dinding Rumah Adat Kajang 2" />
+          <img src="assets/images/dinding1.jpg" alt="Dinding Rumah Adat Kajang 1" />
+          <img src="assets/images/dinding2.jpg" alt="Dinding Rumah Adat Kajang 2" />
         </div>
         <p>Luas bidang dinding dapat dihitung dengan rumus:</p>
         <p>$$L = p \times l$$</p>
@@ -124,7 +124,7 @@
           baris sejajar.
         </p>
         <div class="image-row">
-          <img src="../assets/images/tiang2.jpg" alt="Tiang Rumah Adat Kajang 1" />
+          <img src="assets/images/tiang2.jpg" alt="Tiang Rumah Adat Kajang 1" />
         </div>
         <p>
           Jika jarak antar tiang dilambangkan dengan \(s\) dan jumlah tiang \(n\), maka panjang rumah
@@ -144,8 +144,8 @@
           dan spiritualitas.
         </p>
         <div class="image-row">
-          <img src="../assets/images/tangga1.jpg" alt="Tangga Rumah Adat Kajang 1" />
-          <img src="../assets/images/tangga2.jpg" alt="Tangga Rumah Adat Kajang 2" />
+          <img src="assets/images/tangga1.jpg" alt="Tangga Rumah Adat Kajang 1" />
+          <img src="assets/images/tangga2.jpg" alt="Tangga Rumah Adat Kajang 2" />
         </div>
         <p>
           Tangga menyerupai susunan <strong>segitiga siku-siku berulang</strong>, di mana setiap anak
@@ -161,8 +161,8 @@
           (<em>simetri lipat</em>) dalam geometri.
         </p>
         <div class="image-row">
-          <img src="../assets/images/jendela1.jpg" alt="jendela Adat Kajang 1" />
-          <img src="../assets/images/jendela2.jpg" alt="jendela Rumah Adat Kajang 2" />
+          <img src="assets/images/jendela1.jpg" alt="jendela Adat Kajang 1" />
+          <img src="assets/images/jendela2.jpg" alt="jendela Rumah Adat Kajang 2" />
         </div>
         <p>$$L = p \times l$$</p>
         <p>
@@ -179,7 +179,7 @@
           hormat.
         </p>
          <div class="image-row">
-          <img src="../assets/images/pintu2.jpg" alt="pintu Adat Kajang 1" />
+          <img src="assets/images/pintu2.jpg" alt="pintu Adat Kajang 1" />
         </div>
         <p>
           Secara matematis, pintu berbentuk persegi panjang, sehingga dapat dihitung luas dan kelilingnya:
