--- a/vtour.html
+++ b/vtour.html
@@ -21,7 +21,7 @@
 
 <!-- Modal Minimap -->
 <div id="minimapModal" class="minimap-modal" onclick="hideMinimap()">
-  <img src= "../assets/images/mini map.png" alt="Minimap Virtual Tour" class="minimap-img">
+  <img src= "assets/images/mini map.png" alt="Minimap Virtual Tour" class="minimap-img">
 </div>
 
 <div id="panorama"></div>
@@ -57,14 +57,14 @@
             "URL": "https://id.wikipedia.org/wiki/Bola_Ugi#cite_note-5"
         },
       ] },
-      "s1":  { "title": "depan tangga",  "type": "equirectangular", "panorama": "../assets/360_images/depan tangga.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s2",  "text": "depan pintu" }] },
-      "s2":  { "title": "depan pintu",  "type": "equirectangular", "panorama": "../assets/360_images/depan pintu.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s3",  "text": "ruang tengah" }] },
-      "s3":  { "title": "ruang tengah",  "type": "equirectangular", "panorama": "../assets/360_images/ruang tengah.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s4",  "text": "depan kamar" }] },
-      "s4":  { "title": "depan kamar",  "type": "equirectangular", "panorama": "../assets/360_images/depan kamar.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s5",  "text": "kamar" }] },
-      "s5":  { "title": "kamar",  "type": "equirectangular", "panorama": "../assets/360_images/kamar.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s6",  "text": "kolong" }] },
-      "s6":  { "title": "kolong",  "type": "equirectangular", "panorama": "../assets/360_images/kolong.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s7",  "text": "kanan" }] },
-      "s7":  { "title": "kanan",  "type": "equirectangular", "panorama": "../assets/360_images/kanannya.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s8",  "text": "belakang" }] },
-      "s8":  { "title": "belakang",  "type": "equirectangular", "panorama": "../assets/360_images/belakang.jpg" }
+      "s1":  { "title": "depan tangga",  "type": "equirectangular", "panorama": "assets/360_images/depan tangga.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s2",  "text": "depan pintu" }] },
+      "s2":  { "title": "depan pintu",  "type": "equirectangular", "panorama": "assets/360_images/depan pintu.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s3",  "text": "ruang tengah" }] },
+      "s3":  { "title": "ruang tengah",  "type": "equirectangular", "panorama": "assets/360_images/ruang tengah.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s4",  "text": "depan kamar" }] },
+      "s4":  { "title": "depan kamar",  "type": "equirectangular", "panorama": "assets/360_images/depan kamar.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s5",  "text": "kamar" }] },
+      "s5":  { "title": "kamar",  "type": "equirectangular", "panorama": "assets/360_images/kamar.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s6",  "text": "kolong" }] },
+      "s6":  { "title": "kolong",  "type": "equirectangular", "panorama": "assets/360_images/kolong.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s7",  "text": "kanan" }] },
+      "s7":  { "title": "kanan",  "type": "equirectangular", "panorama": "assets/360_images/kanannya.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s8",  "text": "belakang" }] },
+      "s8":  { "title": "belakang",  "type": "equirectangular", "panorama": "assets/360_images/belakang.jpg" }
     }
   });
 
