--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header dengan gambar utama dan judul -->
     <header>
         <!-- Place the image file at ./images/images_mapping.jpg or adjust the src below -->
-        <img src="../assets/images/kajang.jpg" alt="Rumah Adat Kajang – tampak atas beranotasi">
+        <img src="assets/images/kajang.jpg" alt="Rumah Adat Kajang – tampak atas beranotasi">
         <div class="hero">
         <h1 class="title">Rumah Adat Kajang</h1>
         <p class="lead">Jelajahi kompleks Rumah Adat Kajang dalam tur virtual 360°. Bangunan panggung kayu ini berfungsi sebagai balai pertemuan dan pusat kegiatan adat: musyawarah, penerimaan tamu, hingga upacara sakral. Tata ruangnya menonjolkan <em>alun‑alun</em>/halaman tengah, serambi terbuka sebagai ruang transisi, serta atap pelana/limasan bertumpuk untuk sirkulasi udara tropis.</p>
