--- a/vtour.html
+++ b/vtour.html
@@ -47,7 +47,7 @@
       "showControls": true
     },
     "scenes": {
-      "s0":  { "title": "depan rumah",  "type": "equirectangular", "panorama": "../assets/360_images/depan rumah.jpg",  "hotSpots": [
+      "s0":  { "title": "depan rumah",  "type": "equirectangular", "panorama": "assets/360_images/depan rumah.jpg",  "hotSpots": [
         { "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s1",  "text": "depan tangga" },
         {
             "pitch": 24,
