--- a/article.html
+++ b/article.html
@@ -227,7 +227,7 @@
     <script>
       pannellum.viewer("mini-panorama", {
         type: "equirectangular",
-        panorama: "../assets/360_images/depan rumah.jpg",
+        panorama: "assets/360_images/depan rumah.jpg",
         autoLoad: true,
         showZoomCtrl: true,
         compass: false,
