--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!-- Ini Bagian Footer: menjelaskan siapa pembuatnya-->
     <footer>
-        © 2025 · Tur Virtual Rumah Adat Kajang · Dibangun dengan Pannellum 360° · Dibuat oleh Kelompok Bulukumba
+        © 2025 · Tur Virtual Rumah Adat Kajang · Dibangun dengan Pannellum 360° · Pengembang Rumah Adat Kajang
     </f>
 </body>
 </html>
