--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </article>
             <article class="cta-card">
                 <span class="cta-icon" aria-hidden="true">📐</span>
-                <h3>Buku Petunjuk</h3>
+                <h3>Projective Geometry</h3>
                 <p>Pahami cara menggunakan <em>website</em> untuk bahan ajar.</p>
                 <a class="cta-button" href="math.html#projective-geometry">Pelajari</a>
             </article>
