--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <article class="cta-card">
                 <span class="cta-icon" aria-hidden="true">🏗️</span>
                 <h3>3D Desain</h3>
-                <p>Lihat model 3D  Rumah Adat Kajang untuk detail konstruksi autentik.</p>
-                <a class="cta-button" href="https://sketchfab.com/3d-models/bugis-traditionals-house-d85593bc47784f899d461a92c33bfca4">Lihat Model</a>
+                <p>Lihat model 3D Rumah Adat Kajang untuk detail konstruksi autentik.</p>
+                <a class="cta-button" href="model.html">Lihat Model</a>
             </article>
         </div>
     </section>
