--- a/vtour.html
+++ b/vtour.html
@@ -44,21 +44,12 @@
       "showControls": true
     },
     "scenes": {
-      "s0":  { "title": "depan rumah",  "type": "equirectangular", "panorama": "assets/360_images/depan rumah.jpg",  "hotSpots": [
-        { "pitch": 0, "yaw": -3, "type": "scene", "sceneId": "s1",  "text": "depan tangga" },
-        {
-            "pitch": 24,
-            "yaw": 0.75,
-            "type": "info",
-            "text": "Timpalaja-Ada satu keunikan lain dalam struktur bola ugi di antara dinding dan atap. Terdapat bidang segitiga atau gevel (gable) yang disebut timpalaja. Dengan bagian timpalaja yang dipasang bersusun ini bisa diketahui status sosial pemilik rumah. Jika timpalaja memiliki tiga atau lima susun, maka tandanya pemilik rumah berasal dari golongan elite. Namun jika timpalaja hanya terdiri dari satu atau dua susun, berarti pemilik rumah berasal dari kalangan biasa. Meski demikian, penggunaan timpalaja untuk menunjukkan status sosial pada masa kini sudah tidak seketat pada zaman dahulu dan jumlah susunannya sudah tidak lagi harus selalu sesuai dengan status sosial. Masyarakat dari segala kalangan dapat memasang timpalaja dengan susunan yang sesuai keinginan.<br><br><em>Sumber:</em> <a href=\"https://id.wikipedia.org/wiki/Bola_Ugi#cite_note-5\" target=\"_blank\" rel=\"noopener noreferrer\">Wikipedia - Bola Ugi</a>",
-            "URL": "https://id.wikipedia.org/wiki/Bola_Ugi#cite_note-5"
-        },
-      ] },
-      "s1":  { "title": "depan tangga",  "type": "equirectangular", "panorama": "assets/360_images/depan tangga.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s2",  "text": "depan pintu" }] },
-      "s2":  { "title": "depan pintu",  "type": "equirectangular", "panorama": "assets/360_images/depan pintu.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s3",  "text": "ruang tengah" }] },
-      "s3":  { "title": "ruang tengah",  "type": "equirectangular", "panorama": "assets/360_images/ruang tengah.jpg",  "yaw": -180, "hotSpots": [{ "pitch": 0, "yaw": -220, "type": "scene", "sceneId": "s4",  "text": "depan kamar" }] },
-      "s4":  { "title": "depan kamar",  "type": "equirectangular", "panorama": "assets/360_images/depan kamar.jpg",  "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s5",  "text": "kamar" }] },
-      "s5":  { "title": "kamar",  "type": "equirectangular", "panorama": "assets/360_images/kamar.jpg"}
+      "s0":  { "title": "depan rumah",  "type": "equirectangular", "panorama": "assets/360_images/depan rumah.jpg",  "pitch": 10, "hfov": 120, "hotSpots": [{ "pitch": 10, "yaw": -3, "type": "scene", "sceneId": "s1",  "text": "depan tangga" }] },
+      "s1":  { "title": "depan tangga",  "type": "equirectangular", "panorama": "assets/360_images/depan tangga.jpg",  "pitch": 10, "hfov": 120, "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s2",  "text": "depan pintu" }] },
+      "s2":  { "title": "depan pintu",  "type": "equirectangular", "panorama": "assets/360_images/depan pintu.jpg",  "hfov": 120, "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s3",  "text": "ruang tengah" }] },
+      "s3":  { "title": "ruang tengah",  "type": "equirectangular", "panorama": "assets/360_images/ruang tengah.jpg",  "hfov": 120, "yaw": -180, "hotSpots": [{ "pitch": 0, "yaw": -220, "type": "scene", "sceneId": "s4",  "text": "depan kamar" }] },
+      "s4":  { "title": "depan kamar",  "type": "equirectangular", "panorama": "assets/360_images/depan kamar.jpg",  "hfov": 120, "hotSpots": [{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s5",  "text": "kamar" }] },
+      "s5":  { "title": "kamar",  "type": "equirectangular", "panorama": "assets/360_images/kamar.jpg", "hfov": 120, "hotSpots":[{ "pitch": 0, "yaw": 0, "type": "scene", "sceneId": "s0", "text": "Kembali ke depan rumah" }]}
     }
   });
 
