--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <article class="cta-card">
                 <span class="cta-icon" aria-hidden="true">📐</span>
                 <h3>Projective Geometry</h3>
-                <p>Pahami cara menggunakan <em>website</em> untuk bahan ajar.</p>
-                <a class="cta-button" href="math.html#projective-geometry">Pelajari</a>
+                <p>Projective Geometry dari Rumah Adat Kajang.</p>
+                <a class="cta-button" href="projectivegeometri.html">Pelajari</a>
             </article>
             <article class="cta-card">
                 <span class="cta-icon" aria-hidden="true">🏗️</span>
