--- a/videodrone.html
+++ b/videodrone.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Drone Rumah Adat Balla Lompoa</title>
+  <title>Video Drone Rumah Adat Kajang</title>
 
   <style>
     body {
@@ -95,13 +95,13 @@
 
   <button class="back-button" onclick="window.location.href='index.html'">← Kembali</button>
 
-  <h1>Video Drone Rumah Adat Balla Lompoa</h1>
+  <h1>Video Drone Rumah Adat Kajang</h1>
 
   <p class="description">
-    Video drone ini menampilkan sudut pandang udara dari Rumah Adat Balla Lompoa, memperlihatkan
-    bentuk arsitektur panggung, susunan atap, dan keseluruhan kompleks bangunan dari perspektif
+    Video drone ini menampilkan sudut pandang udara dari Rumah Adat Kajang, memperlihatkan
+    bentuk susunan atap, dinding, dan keseluruhan kompleks bangunan dari perspektif
     yang tidak dapat dijangkau secara langsung. Melalui rekaman ini, pengunjung dapat memahami
-    skala, proporsi, serta tata ruang Balla Lompoa dengan lebih jelas sebelum menjelajahi tur
+    skala, proporsi, serta tata ruang rumah adat kajang dengan lebih jelas sebelum menjelajahi tur
     virtual yang tersedia.
   </p>
 
@@ -112,7 +112,7 @@
     </video>
   </div>
 
-  <footer>© 2025 Etnomatematika Rumah Adat Balla' Lompoa</footer>
+  <footer>© 2025 Etnomatematika Rumah Adat Kajang</footer>
 
 </body>
 </html>
