--- a/videodrone.html
+++ b/videodrone.html
@@ -112,7 +112,7 @@
     </video>
   </div>
 
-  <footer>© 2025 Etnomatematika Rumah Adat Kajang</footer>
+  <footer>©·2025 Etnomatematika Rumah Adat Kajang</footer>
 
 </body>
 </html>
