--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="cta-icon" aria-hidden="true">📐</span>
                 <h3>Projective Geometry</h3>
                 <p>Projective Geometry dari Rumah Adat Kajang.</p>
-                <a class="cta-button" href="projectivegeometri.html">Pelajari</a>
+                <a class="cta-button" href="projectivegeometry.html">Pelajari</a>
             </article>
             <article class="cta-card">
                 <span class="cta-icon" aria-hidden="true">🏗️</span>
