--- a/model.html
+++ b/model.html
@@ -88,7 +88,7 @@
 <body>
 
   <!-- Tombol kiri atas -->
-  <button class="back-button" onclick="window.location.href='index.html'">← Kembali</button>
+  <button class="back-button" onclick="window.location.href='index.html'">← Kembali ke beranda</button>
 
   <h1>3D Model Rumah Adat Kajang</h1>
 
