--- a/videodrone.html
+++ b/videodrone.html
@@ -93,7 +93,7 @@
 </head>
 <body>
 
-  <button class="back-button" onclick="window.location.href='index.html'">← Kembali</button>
+  <button class="back-button" onclick="window.location.href='index.html'">← Kembali ke beranda</button>
 
   <h1>Video Drone Rumah Adat Kajang</h1>
 
