--- a/projectivegeometry.html
+++ b/projectivegeometry.html
@@ -30,17 +30,22 @@
       background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,0));
       border-bottom:1px solid var(--line);
     }
-    header h1{
-      margin:0;
-      font-size:clamp(32px,4vw,48px);
-      font-weight:600;
-      letter-spacing:1px;
+    header h1 {
+      font-size: 2.4rem;
+      margin: 0 0 10px;
+      color: var(--ink);
     }
     header h2{
       margin-top:6px;
       color:var(--muted);
       font-weight:400;
       font-size:clamp(16px,2vw,20px);
+    }
+    header .muted {
+      font-size: 1.1rem;
+      color: var(--muted);
+      max-width: 750px;
+      margin: 0 auto;
     }
 
     .shell{
@@ -107,7 +112,7 @@
 
   <!-- HEADER -->
   <header>
-    <h1>PROJECTIVE GEOMETRI</h1>
+    <h1>Projektive Geometry</h1>
     <h2>Rumah Adat Kajang</h2>
   </header>
 
