--- a/projectivegeometry.html
+++ b/projectivegeometry.html
@@ -112,8 +112,8 @@
 
   <!-- HEADER -->
   <header>
-    <h1>Projektive Geometry</h1>
-    <h2>Rumah Adat Kajang</h2>
+    <h1>Projektive Geometry-Rumah Adat Kajang</h1>
+    <div class="muted">Putar, perbesar, dan amati detail konstruksinya langsung di browser.</div>
   </header>
 
   <div class="shell">
