--- a/videodrone.html
+++ b/videodrone.html
@@ -124,12 +124,13 @@
 
     <section class="content">
 
-      <h3>Representasi Proyeksi Rumah Adat Kajang</h3>
-      <p>
-        Projective Geometri membantu kita memahami bagaimana bentuk tiga dimensi Rumah Adat Kajang
-        dapat diproyeksikan ke dalam dua dimensi tanpa kehilangan hubungan antar titik, garis,
-        dan bidangnya. Diagram berikut menunjukkan transformasi dari foto asli, penarikan garis
-        struktur, hingga model wireframe hasil proyeksi.
+      <h3>Video Drone Rumah Adat Kajang</h3>
+      <p class="description">
+        Video drone ini menampilkan sudut pandang udara dari Rumah Adat Kajang, memperlihatkan
+        bentuk arsitektur panggung, susunan atap, dan keseluruhan kompleks bangunan dari perspektif
+        yang tidak dapat dijangkau secara langsung. Melalui rekaman ini, pengunjung dapat memahami
+        skala, proporsi, serta tata ruang Rumah Adat Kajang dengan lebih jelas sebelum menjelajahi tur
+        virtual yang tersedia.
       </p>
 
       <div class="model-container">
