--- a/projectivegeometry.html
+++ b/projectivegeometry.html
@@ -126,7 +126,7 @@
 
       <h3>Representasi Proyeksi Rumah Adat Kajang</h3>
       <p>
-        Projective Geometri membantu kita memahami bagaimana bentuk tiga dimensi Rumah Adat Bugis
+        Projective Geometri membantu kita memahami bagaimana bentuk tiga dimensi Rumah Adat Kajang
         dapat diproyeksikan ke dalam dua dimensi tanpa kehilangan hubungan antar titik, garis,
         dan bidangnya. Diagram berikut menunjukkan transformasi dari foto asli, penarikan garis
         struktur, hingga model wireframe hasil proyeksi.
