--- a/projectivegeometry.html
+++ b/projectivegeometry.html
@@ -113,7 +113,7 @@
   <!-- HEADER -->
   <header>
     <h1>Projektive Geometry-Rumah Adat Kajang</h1>
-    <div class="muted">Putar, perbesar, dan amati detail konstruksinya langsung di browser.</div>
+    <div class="muted">Analisis dan pahami detail geometri proyektif konstruksi secara interaktif di peramban Anda.</div>
   </header>
 
   <div class="shell">
